--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -16,9 +16,10 @@
     "framer-motion": "^12.4.10",
     "mongoose": "^8.13.1",
     "nodemon": "^3.1.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.2.0",
+    "router-dom": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
